--- a/trunk/doc/latex/class_clip.tex
+++ b/trunk/doc/latex/class_clip.tex
@@ -127,12 +127,17 @@ Constructor.
 Initializes a \hyperlink{class_clip}{Clip} object located at coordinates (xOrigin,yOrigin) in the source image, with the height and width passed. The xOrigin value allows access to the image rows, while the yOrigin value allows access to the image columns. If the xOrigin and yOrigin are out of the image borders, an exception is thrown. If the width and height are over the image borders the clip is truncated. Note that, as in C and C++, indexes begin at (0,0).
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em image}]The underlying image where the clip belongs to \item[{\em xOrigin}]The upper left-most pixel X coordinate of the clip \item[{\em yOrigin}]The upper left-most pixel Y coordinate of the clip \item[{\em height}]The height of the clip \item[{\em width}]The width of the clip\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 18 of file Clip.cpp.\hypertarget{class_clip_88647ed65e3482b5e0533ec98667b0fa}{
+Definition at line 24 of file Clip.cpp.\hypertarget{class_clip_88647ed65e3482b5e0533ec98667b0fa}{
 \index{Clip@{Clip}!$\sim$Clip@{$\sim$Clip}}
 \index{$\sim$Clip@{$\sim$Clip}!Clip@{Clip}}
 \subsubsection[$\sim$Clip]{\setlength{\rightskip}{0pt plus 5cm}Clip::$\sim$Clip ()}}
@@ -149,7 +154,7 @@ Destroys a \hyperlink{class_clip}{Clip} object, deleting all the associated data
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 100 of file Clip.cpp.
+Definition at line 106 of file Clip.cpp.
 
 \subsection{Member Function Documentation}
 \hypertarget{class_clip_f4500103f1babcf2b9283eaffc6af96a}{
@@ -162,12 +167,14 @@ Definition at line 100 of file Clip.cpp.
 Returns the current Image object. 
 
 \begin{Desc}
+\item[Returns:]The underlying image where the clip belongs to\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 110 of file Clip.cpp.\hypertarget{class_clip_6965fb65870eeb239c8a829444bb4ed7}{
+Definition at line 118 of file Clip.cpp.\hypertarget{class_clip_6965fb65870eeb239c8a829444bb4ed7}{
 \index{Clip@{Clip}!xOrigin@{xOrigin}}
 \index{xOrigin@{xOrigin}!Clip@{Clip}}
 \subsubsection[xOrigin]{\setlength{\rightskip}{0pt plus 5cm}unsigned int Clip::xOrigin () const}}
@@ -177,12 +184,14 @@ Definition at line 110 of file Clip.cpp.\hypertarget{class_clip_6965fb65870eeb23
 Returns the X coordinate of the clip's upper leftmost pixel. 
 
 \begin{Desc}
+\item[Returns:]The upper left-most pixel X coordinate of the clip\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 120 of file Clip.cpp.\hypertarget{class_clip_59bed794f674858a9ca02fce36c58fac}{
+Definition at line 130 of file Clip.cpp.\hypertarget{class_clip_59bed794f674858a9ca02fce36c58fac}{
 \index{Clip@{Clip}!xOrigin@{xOrigin}}
 \index{xOrigin@{xOrigin}!Clip@{Clip}}
 \subsubsection[xOrigin]{\setlength{\rightskip}{0pt plus 5cm}void Clip::xOrigin (unsigned int {\em x})}}
@@ -194,12 +203,22 @@ Sets the X coordinate of the clip's upper leftmost pixel.
 If the new value x is over the image borders, an exception is thrown.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em x}]The upper left-most pixel X coordinate of the clip\end{description}
+\end{Desc}
+\begin{Desc}
+\item[Exceptions:]
+\begin{description}
+\item[{\em \hyperlink{class_nessie_exception}{NessieException}}]\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 132 of file Clip.cpp.\hypertarget{class_clip_6023296db25d263b311900cafb7cc55d}{
+Definition at line 146 of file Clip.cpp.\hypertarget{class_clip_6023296db25d263b311900cafb7cc55d}{
 \index{Clip@{Clip}!yOrigin@{yOrigin}}
 \index{yOrigin@{yOrigin}!Clip@{Clip}}
 \subsubsection[yOrigin]{\setlength{\rightskip}{0pt plus 5cm}unsigned int Clip::yOrigin () const}}
@@ -209,12 +228,14 @@ Definition at line 132 of file Clip.cpp.\hypertarget{class_clip_6023296db25d263b
 Returns the Y coordinate of the clip's upper leftmost pixel. 
 
 \begin{Desc}
+\item[Returns:]The upper left-most pixel Y coordinate of the clip\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 148 of file Clip.cpp.\hypertarget{class_clip_6b0100fdd089be816b97465df4dd2846}{
+Definition at line 164 of file Clip.cpp.\hypertarget{class_clip_6b0100fdd089be816b97465df4dd2846}{
 \index{Clip@{Clip}!yOrigin@{yOrigin}}
 \index{yOrigin@{yOrigin}!Clip@{Clip}}
 \subsubsection[yOrigin]{\setlength{\rightskip}{0pt plus 5cm}void Clip::yOrigin (unsigned int {\em y})}}
@@ -226,12 +247,22 @@ Sets the Y coordinate of the clip's upper leftmost pixel.
 If the new value y is over the image borders, an exception is thrown.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em y}]The upper left-most pixel Y coordinate of the clip\end{description}
+\end{Desc}
+\begin{Desc}
+\item[Exceptions:]
+\begin{description}
+\item[{\em \hyperlink{class_nessie_exception}{NessieException}}]\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 160 of file Clip.cpp.\hypertarget{class_clip_393710a6b136f400dd5c900f8831e1a8}{
+Definition at line 180 of file Clip.cpp.\hypertarget{class_clip_393710a6b136f400dd5c900f8831e1a8}{
 \index{Clip@{Clip}!height@{height}}
 \index{height@{height}!Clip@{Clip}}
 \subsubsection[height]{\setlength{\rightskip}{0pt plus 5cm}unsigned int Clip::height () const}}
@@ -241,12 +272,14 @@ Definition at line 160 of file Clip.cpp.\hypertarget{class_clip_393710a6b136f400
 Returns the clip's height. 
 
 \begin{Desc}
+\item[Returns:]The height of the clip\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 176 of file Clip.cpp.\hypertarget{class_clip_c6eeb473cb104e6e3f90f4099c7ef741}{
+Definition at line 198 of file Clip.cpp.\hypertarget{class_clip_c6eeb473cb104e6e3f90f4099c7ef741}{
 \index{Clip@{Clip}!height@{height}}
 \index{height@{height}!Clip@{Clip}}
 \subsubsection[height]{\setlength{\rightskip}{0pt plus 5cm}void Clip::height (unsigned int {\em height})}}
@@ -258,12 +291,17 @@ Sets the clip's height.
 If the height is over the image borders the clip is truncated to its maximum allowed value.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em height}]The height of the clip\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 188 of file Clip.cpp.\hypertarget{class_clip_d3e816599913e4051e5d50fae17ecd76}{
+Definition at line 212 of file Clip.cpp.\hypertarget{class_clip_d3e816599913e4051e5d50fae17ecd76}{
 \index{Clip@{Clip}!width@{width}}
 \index{width@{width}!Clip@{Clip}}
 \subsubsection[width]{\setlength{\rightskip}{0pt plus 5cm}unsigned int Clip::width () const}}
@@ -273,12 +311,14 @@ Definition at line 188 of file Clip.cpp.\hypertarget{class_clip_d3e816599913e405
 Returns the clip's width. 
 
 \begin{Desc}
+\item[Returns:]The width of the clip\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 203 of file Clip.cpp.\hypertarget{class_clip_17c1a23e159bedb6e2988235b8b568e7}{
+Definition at line 229 of file Clip.cpp.\hypertarget{class_clip_17c1a23e159bedb6e2988235b8b568e7}{
 \index{Clip@{Clip}!width@{width}}
 \index{width@{width}!Clip@{Clip}}
 \subsubsection[width]{\setlength{\rightskip}{0pt plus 5cm}void Clip::width (unsigned int {\em width})}}
@@ -290,12 +330,17 @@ Sets the clip's width.
 If the width is over the image borders the clip is truncated to its maximum allowed value.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em width}]The height of the clip\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 215 of file Clip.cpp.\hypertarget{class_clip_e22de9122a399af67576eb114842846a}{
+Definition at line 243 of file Clip.cpp.\hypertarget{class_clip_e22de9122a399af67576eb114842846a}{
 \index{Clip@{Clip}!colorspace@{colorspace}}
 \index{colorspace@{colorspace}!Clip@{Clip}}
 \subsubsection[colorspace]{\setlength{\rightskip}{0pt plus 5cm}{\bf Colorspace} Clip::colorspace () const}}
@@ -305,6 +350,8 @@ Definition at line 215 of file Clip.cpp.\hypertarget{class_clip_e22de9122a399af6
 Returns the clip's current colorspace. 
 
 \begin{Desc}
+\item[Returns:]The current colorspace of the clip\end{Desc}
+\begin{Desc}
 \item[See also:]\hyperlink{_colorspace_8h_7a7e24cdb2a27271343f0adceff89f65}{Colorspace}\end{Desc}
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -312,7 +359,7 @@ Returns the clip's current colorspace.
 \item[Date:]2008-09-24 \end{Desc}
 
 
-Definition at line 232 of file Clip.cpp.\hypertarget{class_clip_7e7fa163b90c573adc424e022235c539}{
+Definition at line 262 of file Clip.cpp.\hypertarget{class_clip_7e7fa163b90c573adc424e022235c539}{
 \index{Clip@{Clip}!colorspace@{colorspace}}
 \index{colorspace@{colorspace}!Clip@{Clip}}
 \subsubsection[colorspace]{\setlength{\rightskip}{0pt plus 5cm}void Clip::colorspace ({\bf Colorspace} {\em colorspace})}}
@@ -324,6 +371,11 @@ Sets the clip's current colorspace.
 By setting the colorspace to a certain value the image colorspace changes, affecting all its pixels and the information regarding the image colors.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em colorspace}]The colorspace of the clip according to values in Colorspace\end{description}
+\end{Desc}
+\begin{Desc}
 \item[See also:]\hyperlink{_colorspace_8h_7a7e24cdb2a27271343f0adceff89f65}{Colorspace}\end{Desc}
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -331,7 +383,7 @@ By setting the colorspace to a certain value the image colorspace changes, affec
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 247 of file Clip.cpp.\hypertarget{class_clip_6f8d3a88f89461350228f5e7b7b9d694}{
+Definition at line 279 of file Clip.cpp.\hypertarget{class_clip_6f8d3a88f89461350228f5e7b7b9d694}{
 \index{Clip@{Clip}!isGrayscale@{isGrayscale}}
 \index{isGrayscale@{isGrayscale}!Clip@{Clip}}
 \subsubsection[isGrayscale]{\setlength{\rightskip}{0pt plus 5cm}bool Clip::isGrayscale () const}}
@@ -341,12 +393,14 @@ Definition at line 247 of file Clip.cpp.\hypertarget{class_clip_6f8d3a88f8946135
 Returns true if the clip is in grayscale. 
 
 \begin{Desc}
+\item[Returns:]True if the colorspace of the clip is grayscale\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 297 of file Clip.cpp.\hypertarget{class_clip_0a535167abd0a544a2de56c317bb6f3c}{
+Definition at line 331 of file Clip.cpp.\hypertarget{class_clip_0a535167abd0a544a2de56c317bb6f3c}{
 \index{Clip@{Clip}!isColor@{isColor}}
 \index{isColor@{isColor}!Clip@{Clip}}
 \subsubsection[isColor]{\setlength{\rightskip}{0pt plus 5cm}bool Clip::isColor () const}}
@@ -356,12 +410,14 @@ Definition at line 297 of file Clip.cpp.\hypertarget{class_clip_0a535167abd0a544
 Returns true if the clip is in color. 
 
 \begin{Desc}
+\item[Returns:]True if the colorspace of the clip is RGB\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 310 of file Clip.cpp.\hypertarget{class_clip_5045f79876d4299b54803d56b26d5f75}{
+Definition at line 346 of file Clip.cpp.\hypertarget{class_clip_5045f79876d4299b54803d56b26d5f75}{
 \index{Clip@{Clip}!isMonochromatic@{isMonochromatic}}
 \index{isMonochromatic@{isMonochromatic}!Clip@{Clip}}
 \subsubsection[isMonochromatic]{\setlength{\rightskip}{0pt plus 5cm}bool Clip::isMonochromatic () const}}
@@ -371,12 +427,14 @@ Definition at line 310 of file Clip.cpp.\hypertarget{class_clip_5045f79876d4299b
 Returns true if the clips is in black and white. 
 
 \begin{Desc}
+\item[Returns:]True if the colorspace of the clip is monochromatic\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 323 of file Clip.cpp.\hypertarget{class_clip_74eded11c0dcbd2b10b453074cbb8b84}{
+Definition at line 361 of file Clip.cpp.\hypertarget{class_clip_74eded11c0dcbd2b10b453074cbb8b84}{
 \index{Clip@{Clip}!getPixel@{getPixel}}
 \index{getPixel@{getPixel}!Clip@{Clip}}
 \subsubsection[getPixel]{\setlength{\rightskip}{0pt plus 5cm}{\bf Pixel} Clip::getPixel (unsigned int {\em x}, \/  unsigned int {\em y}) const}}
@@ -388,12 +446,19 @@ Returns the pixel at coordinates (x,y).
 If either the x coordinate or the y coordinate are out of the image borders, an exception is thrown. If the image colorspace is undefined, an exception is also thrown.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em x}]The upper left-most pixel X coordinate of the clip \item[{\em y}]The upper left-most pixel Y coordinate of the clip\end{description}
+\end{Desc}
+\begin{Desc}
+\item[Returns:]The pixel at coordinates (x,y)\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 339 of file Clip.cpp.\hypertarget{class_clip_3c48493242de7453438ed0e8d0ea74df}{
+Definition at line 382 of file Clip.cpp.\hypertarget{class_clip_3c48493242de7453438ed0e8d0ea74df}{
 \index{Clip@{Clip}!setPixel@{setPixel}}
 \index{setPixel@{setPixel}!Clip@{Clip}}
 \subsubsection[setPixel]{\setlength{\rightskip}{0pt plus 5cm}void Clip::setPixel (unsigned int {\em x}, \/  unsigned int {\em y}, \/  double {\em grayLevel})}}
@@ -405,12 +470,17 @@ Sets the gray level of a pixel at coordinates (x,y).
 If either the x coordinate or the y coordinate are out of the image borders, an exception is thrown. If the image colorspace is not grayscale no changes are made. The gray level must be normalized in a value from 0 to 1, otherwise it is truncated either to 0 if it's less than 0 or to 1 if it's greater than 1.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em x}]The upper left-most pixel X coordinate of the clip \item[{\em y}]The upper left-most pixel Y coordinate of the clip \item[{\em grayLevel}]The new gray level for the pixel at coordinates (x,y)\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 389 of file Clip.cpp.\hypertarget{class_clip_1e28a9ed2676460de4b5b9ab1b985f4c}{
+Definition at line 436 of file Clip.cpp.\hypertarget{class_clip_1e28a9ed2676460de4b5b9ab1b985f4c}{
 \index{Clip@{Clip}!setPixel@{setPixel}}
 \index{setPixel@{setPixel}!Clip@{Clip}}
 \subsubsection[setPixel]{\setlength{\rightskip}{0pt plus 5cm}void Clip::setPixel (unsigned int {\em x}, \/  unsigned int {\em y}, \/  double {\em red}, \/  double {\em green}, \/  double {\em blue})}}
@@ -422,12 +492,17 @@ Sets the color of a pixel at coordinates (x,y).
 If either the x coordinate or the y coordinate are out of the image borders, an exception is thrown. If the image colorspace is not RGB no changes are made. Each channel value must be normalized in a value from 0 to 1, otherwise it is truncated either to 0 if it's less than 0 or to 1 if it's greater than 1.
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em x}]The upper left-most pixel X coordinate of the clip \item[{\em y}]The upper left-most pixel Y coordinate of the clip \item[{\em red}]The new color value of red channel for the pixel at coordinates (x,y) \item[{\em green}]The new color value of green channel for the pixel at coordinates (x,y) \item[{\em blue}]The new color value of blue channel for the pixel at coordinates (x,y)\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 431 of file Clip.cpp.\hypertarget{class_clip_9e78d68c58016aaff8c65ddac29ed07f}{
+Definition at line 484 of file Clip.cpp.\hypertarget{class_clip_9e78d68c58016aaff8c65ddac29ed07f}{
 \index{Clip@{Clip}!setPixel@{setPixel}}
 \index{setPixel@{setPixel}!Clip@{Clip}}
 \subsubsection[setPixel]{\setlength{\rightskip}{0pt plus 5cm}void Clip::setPixel (unsigned int {\em x}, \/  unsigned int {\em y}, \/  bool {\em isForeground})}}
@@ -439,12 +514,17 @@ Sets whether a pixel at coordinates (x,y) belongs to the foreground or not.
 If either the x coordinate or the y coordinate are out of the image borders, an exception is thrown. If the image colorspace is not monochromatic no changes are made
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em x}]The upper left-most pixel X coordinate of the clip \item[{\em y}]The upper left-most pixel Y coordinate of the clip \item[{\em isForeground}]Tells whether the pixel at coordinates (x,y) belongs to the foreground or not\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 472 of file Clip.cpp.\hypertarget{class_clip_66fc93c15de96d077d2242a53576528e}{
+Definition at line 529 of file Clip.cpp.\hypertarget{class_clip_66fc93c15de96d077d2242a53576528e}{
 \index{Clip@{Clip}!relocateClipOrigin@{relocateClipOrigin}}
 \index{relocateClipOrigin@{relocateClipOrigin}!Clip@{Clip}}
 \subsubsection[relocateClipOrigin]{\setlength{\rightskip}{0pt plus 5cm}void Clip::relocateClipOrigin ()\hspace{0.3cm}{\tt  \mbox{[}private\mbox{]}}}}
@@ -461,7 +541,7 @@ When any of the clip attributes change, it is neccesary to relocate the clip pos
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 512 of file Clip.cpp.
+Definition at line 569 of file Clip.cpp.
 
 Referenced by height(), width(), xOrigin(), and yOrigin().\hypertarget{class_clip_e050cf90340e9160f79688627d69a00b}{
 \index{Clip@{Clip}!adjustClipSize@{adjustClipSize}}
@@ -480,7 +560,7 @@ When the clip origin changes, it is neccesary to test whether the clip dimension
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 533 of file Clip.cpp.
+Definition at line 590 of file Clip.cpp.
 
 Referenced by xOrigin(), and yOrigin().
 
