--- a/trunk/doc/latex/class_nessie_exception.tex
+++ b/trunk/doc/latex/class_nessie_exception.tex
@@ -54,12 +54,17 @@ Constructor.
 Initializes an exception object with information passed
 
 \begin{Desc}
+\item[Parameters:]
+\begin{description}
+\item[{\em message}]A string containing a message that explains the exception raised\end{description}
+\end{Desc}
+\begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
 \begin{Desc}
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 15 of file NessieException.cpp.\hypertarget{class_nessie_exception_19f44d2725dd53e2f10505a88e5773f2}{
+Definition at line 17 of file NessieException.cpp.\hypertarget{class_nessie_exception_19f44d2725dd53e2f10505a88e5773f2}{
 \index{NessieException@{NessieException}!$\sim$NessieException@{$\sim$NessieException}}
 \index{$\sim$NessieException@{$\sim$NessieException}!NessieException@{NessieException}}
 \subsubsection[$\sim$NessieException]{\setlength{\rightskip}{0pt plus 5cm}NessieException::$\sim$NessieException ()\hspace{0.3cm}{\tt  \mbox{[}virtual\mbox{]}}}}
@@ -76,7 +81,7 @@ Destroys a \hyperlink{class_nessie_exception}{NessieException} object
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 27 of file NessieException.cpp.
+Definition at line 29 of file NessieException.cpp.
 
 \subsection{Member Function Documentation}
 \hypertarget{class_nessie_exception_ec94145f2fd5febb7ca0b7587652b777}{
@@ -96,7 +101,7 @@ The message is formed using the file name, its line and the explanation
 \item[Date:]2008-09-26 \end{Desc}
 
 
-Definition at line 39 of file NessieException.cpp.
+Definition at line 41 of file NessieException.cpp.
 
 The documentation for this class was generated from the following files:\begin{CompactItemize}
 \item 
